update swagger documentation
update swagger documentation to fix the issue with cors during hosting
